syntax = "proto3";

package order;

option go_package = "hexabank/api/proto/fraud";

message PaymentRequest {
  string id = 1;
  int32 amount = 2;
}

message FraudResponse {
    bool isFraudulent = 1;
    string message = 2;
}

service FraudService {
    rpc FraudCheckHandler(PaymentRequest) returns (FraudResponse);
}
